Contact form elemets should no longer overlap wrapper

--- a/contact.css
+++ b/contact.css
@@ -35,7 +35,6 @@ input, select, textarea {
 
 textarea {
     min-height: 150px;
-    min-width: 300px;
     border-radius: 10px;
 }
 
